made changes to finalize

--- a/app/views/landing/bishal8.html.erb
+++ b/app/views/landing/bishal8.html.erb
@@ -245,6 +245,10 @@
                         <th scope="col" class="font-weight-bold sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Status : activate to sort column ascending" style="width: 181px;">
                             <div class="d-flex justify-content-between align-items-center"></div>
                         </th>
+
+                        <th scope="col" class="font-weight-bold sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Status : activate to sort column ascending" style="width: 181px;">
+                            <div class="d-flex justify-content-between align-items-center"></div>
+                        </th>
                         
                         </tr>
                     </thead>
@@ -277,6 +281,9 @@
                             <td class="align-middle text-primary">2018</td>
                             <td class="align-middle text-primary">03 Sept. 2018</td>
                             <td class="align-middle text-primary">Details</td>
+                            <td class="align-middle text-secondary">
+                                <span class="far fa-trash-alt"></span>    
+                            </td>
                         </tr>
 
                         <tr class="js-datatabale-details odd font-size-13" data-details="" role="row">
@@ -307,6 +314,9 @@
                             <td class="align-middle text-primary">2019</td>
                             <td class="align-middle text-primary">03 Mar. 2019</td>
                             <td class="align-middle text-primary">Details</td>
+                            <td class="align-middle text-secondary">
+                                <span class="far fa-trash-alt"></span>    
+                            </td>
                         </tr>
 
                         <tr class="js-datatabale-details odd font-size-13" data-details="" role="row">
@@ -337,6 +347,9 @@
                             <td class="align-middle text-primary">2017</td>
                             <td class="align-middle text-primary">15 Aug. 2017</td>
                             <td class="align-middle text-primary">Details</td>
+                            <td class="align-middle text-secondary">
+                                <span class="far fa-trash-alt"></span>    
+                            </td>
                         </tr>
                     </tbody>
                 </table>   
