2 new pages added

--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -6,8 +6,7 @@
             <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar hs-menu-initialized hs-menu-horizontal">
                 <!-- Logo -->
                 <a class="navbar-brand u-header__navbar-brand mr-7 " href="/landing/bishal" aria-label="d">
-                    <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/open.png'), :alt => "Logo", :class => "custom_logo" %>
-                    <span><h3>Oppn.io </h3> </span>
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/oppn-white.svg'), :alt => "Logo", :class => "custom_logo" %>
                 </a>
                 <!-- End Logo -->
             </nav>
@@ -16,7 +15,6 @@
     </div>
 </header>
 <!-- End of Header -->
-
 
 <!-- Hero Section -->
 <div class="u-gradient-overlay-half-primary-video-v1 u-bg-img-hero" style="background-image: url(../../assets/img/1920x1080/img20.jpg);">
