brand list view and Cest parti page added

--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -121,7 +121,7 @@
             <div class="col-lg-5 order-lg-2 mb-9 mb-lg-0">
                 <!-- Description -->
                 <p>Découvrez de nombreuses enseignes que vous pouvez visiter en traversant la rue !</p>
-                <a class="btn u-btn-secondary--air u-btn-wide u-btn-pill transition-3d-hover" href="hire-us.html">AUTOUR DE MOI</a>
+                <a class="btn u-btn-secondary--air u-btn-wide u-btn-pill transition-3d-hover" href="#">AUTOUR DE MOI</a>
                 <!-- End Description -->
             </div>
 
@@ -9055,60 +9055,60 @@
     <!-- Lists -->
     <div class="container space-top-2 space-top-md-3 space-bottom-2">
         <!-- Logo -->
-        <a class="d-inline-flex align-items-center mb-5" href="bishal" aria-label="oppn">
+        <a class="d-inline-flex align-items-center mb-4" href="bishal" aria-label="oppn">
             <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/open.png'), :alt => "Logo", :class => "custom_logo" %>
             <span class="brand brand-primary font-weight-bold">Oppn.io</span>
         </a>
         <!-- End Logo -->
 
         <div class="row">
-            <div class="col-sm-6 col-lg-4 mb-7 mb-sm-0">
+            <div class="col-sm-12 col-lg-4 mb-7 mb-sm-5">
                 <div class="mb-4">
                     <h2 class="text-primary h5">Oppn vous ouvre les portes des franchises, partout en France</h2>
                 </div>
                 <a class="btn btn-primary btn-sm transition-3d-hover" href="#" target="_blank">Toutes les enseignes</a>
             </div>
 
-            <div class="col-sm-3 col-lg-2 mb-4 mb-sm-0 ml-lg-auto">
+            <div class="col-sm-4 col-lg-2 mb-4 mb-sm-5 ml-lg-auto">
                 <h4 class="h6 font-weight-semi-bold">A propos</h4>
 
                 <!-- List Group -->
                 <ul class="list-group list-group-flush list-group-borderless mb-0">
-                    <li><a class="list-group-item list-group-item-action" href="#">Mentions légales</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="#">Données personnelles</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="#">CGU</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="#">Nous contacter</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Mentions légales</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Données personnelles</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">CGU</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Nous contacter</a></li>
                 </ul>
                 <!-- End List Group -->
             </div>
 
-            <div class="col-sm-3 col-lg-3 mb-4 mb-sm-0 ml-lg-auto">
+            <div class="col-sm-4 col-lg-3 mb-4 mb-sm-6 ml-lg-auto">
                 <h4 class="h6 font-weight-semi-bold">Vos visites par thème</h4>
 
                 <!-- List Group -->
                 <ul class="list-group list-group-flush list-group-borderless mb-0">
-                    <li><a class="list-group-item list-group-item-action" href="#">Franchises alimentaire</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="#">Franchises beauté</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="#">Franchise restauration</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="#">Franchise prêt-à-porter</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="#">Franchise maison</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="#">Franchise service </a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Franchises alimentaire</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Franchises beauté</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Franchise restauration</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Franchise prêt-à-porter</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Franchise maison</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Franchise service </a></li>
 
                 </ul>
                 <!-- End List Group -->
             </div>
 
-            <div class="col-sm-3 col-lg-2 mb-4 mb-sm-0 ml-lg-auto">
+            <div class="col-sm-4 col-lg-2 mb-4 mb-sm-5 ml-lg-auto">
                 <h4 class="h6 font-weight-semi-bold">Nos sites</h4>
 
                 <!-- List Group -->
                 <ul class="list-group list-group-flush list-group-borderless mb-0">
-                    <li><a class="list-group-item list-group-item-action" href="#">Le Groupe</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="https://insiti.com/" _target="blank">inSiti</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="#">Loop</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="#">Projets-locaux</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="#">Conceptstor</a></li>
-                    <li><a class="list-group-item list-group-item-action" href="#">Oppn</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Le Groupe</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="https://insiti.com/" _target="blank">inSiti</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Loop</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Projets-locaux</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Conceptstor</a></li>
+                    <li class="mb-n3"><a class="list-group-item list-group-item-action" href="#">Oppn</a></li>
 
                 </ul>
                 <!-- End List Group -->
@@ -9118,7 +9118,7 @@
     <!-- End Lists -->
 
     <!-- Social Networks -->
-    <div class="container space-1">
+    <div class="container space-1 ">
       <div class="row justify-content-end">
         <div class="col-md-5 text-right">
            <ul class="list-inline mb-0">
