--- a/app/views/landing/bishal3.html.erb
+++ b/app/views/landing/bishal3.html.erb
@@ -26,7 +26,7 @@
                         </span>
                     </li>
                     <li class="list-inline-item">
-                        <a class="btn btn-sm btn-soft-primary" href="#">
+                        <a class="btn btn-sm btn-soft-primary" href="bishal4">
                         <span class="fas fa-list"></span>
                         </a>
                     </li>
@@ -88,7 +88,7 @@
                             <!-- Title -->
                             <div class="mb-4">
                                 <h3 class="h5 mb-1">Lyon</h3>
-                                <p class="font-size-1">T123 rue de la liberté</p>
+                                <p class="font-size-1">123 rue de la liberté</p>
                             </div>
                             <!-- End Title -->
 
@@ -198,7 +198,7 @@
                             <!-- Title -->
                             <div class="mb-4">
                                 <h3 class="h5 mb-1">Nice</h3>
-                                <p class="font-size-1">T123 rue de la liberté</p>
+                                <p class="font-size-1">123 rue de la liberté</p>
                             </div>
                             <!-- End Title -->
 
@@ -308,7 +308,7 @@
                             <!-- Title -->
                             <div class="mb-4">
                                 <h3 class="h5 mb-1">Bordeaux</h3>
-                                <p class="font-size-1">T123 rue de la liberté</p>
+                                <p class="font-size-1">123 rue de la liberté</p>
                             </div>
                             <!-- End Title -->
 
@@ -702,4 +702,3 @@
         </div>
     </div>
 </div>
-
