--- a/frontend/init/stylesheet/bishal.css
+++ b/frontend/init/stylesheet/bishal.css
@@ -130,5 +130,33 @@ figure {
   z-index: -1;
 }
 
-  
-    
+.mb-n3{
+  margin-bottom: -1rem;
+}
+
+.ml-n3{
+  margin-left: -1rem;
+}
+
+.btn-icon {
+  position: relative;
+  line-height: 0;
+  font-size: 1rem;
+  width: 3.125rem;
+  height: 3.125rem;
+  padding: 0;
+}
+
+.btn-icon.btn-sm, .btn-group-sm > .btn-icon.btn {
+  font-size: 0.8175rem;
+  width: 2rem;
+  height: 2rem;
+}
+
+.btn-icon__inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
